overflow fix

--- a/adaptable/pages/mainComponents/table/SelectTable.module.scss
+++ b/adaptable/pages/mainComponents/table/SelectTable.module.scss
@@ -9,7 +9,6 @@
         display: flex;
         flex-direction: row;
         padding-left: 4.375rem;
-        width: 100%;
         background-color: #FFFFFF;
 
         &__item {
